--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,8 @@ h4 {
 	background-color: rgba(255,255,255,1);
 	z-index: 999;
 	box-shadow: 0px 10px 190px 120px rgba(0,0,0,0.8); 
+	-moz-box-shadow: 0px 10px 190px 120px rgba(0,0,0,0.8); 
+	-webkit-box-shadow:0 px 10px 190px 120px rgba(0,0,0,0.8); 
 	display: none;
 	text-align: center;
 	overflow: scroll;
