--- a/css/style.css
+++ b/css/style.css
@@ -381,14 +381,14 @@ h4 {
 	width: 90%;
 	height: 90vh;
 	max-height: 800px;
-	margin-top: 250px;
+	margin-top: -47%;
 	margin-left: 5%;
 	position: fixed;
 	background-color: rgba(255,255,255,1);
 	z-index: 999;
-	box-shadow: 0px 10px 190px 120px rgba(0,0,0,0.8); 
-	-moz-box-shadow: 0px 10px 190px 120px rgba(0,0,0,0.8); 
-	-webkit-box-shadow:0 px 10px 190px 120px rgba(0,0,0,0.8); 
+	box-shadow: 0px 10px 190px 120px rgba(0,0,0,0.7); 
+	-moz-box-shadow: 0px 10px 190px 120px rgba(0,0,0,0.7); 
+	-webkit-box-shadow:0 px 10px 190px 120px rgba(0,0,0,0.7); 
 	display: none;
 	text-align: center;
 	overflow: scroll;
