--- a/css/style.css
+++ b/css/style.css
@@ -459,6 +459,44 @@ h3 {
 	transition: 0.5s;
 }
 
+
+
+.buttons2 {
+	width: 100%;
+	height: 90px;
+	margin-left: auto;
+	margin-bottom: auto;
+	margin-top:70px;
+}
+
+.visit2 {
+	background-color: #ea32be;
+	border: 1px solid #fff;
+	width: 140px;
+	height: auto;
+	padding: 7px 0;
+	margin: 0 auto 10px auto;
+	color: #fff;
+	border-radius: 2px;
+	margin-top: 10px;
+	font-size: 14pt;
+	transition: 0.5s;
+}
+
+.visit2:hover {
+	cursor: pointer;
+	background-color: #fff;
+	color: #ea32be;
+}
+
+.buttons2 a:link, a:visited, a:hover, a:active{
+	color:#fff;
+	text-decoration: none;
+ } 
+
+
+
+
 .visit:hover {
 	cursor: pointer;
 	background-color: #ea32be;
